# src/routes/api/tokens.ts
@@ -1,23 +1,22 @@
+import { eq } from 'drizzle-orm'
+import { httpErrors } from '@fastify/sensible'
+import { defineHandlers } from '../../lib/utils.ts'
 import * as schemas from '../../db/schema.ts'
-import { eq, asc } from 'drizzle-orm'
+import { verifyPassword } from '../../lib/password.ts'
 
-export default async function (fastify) {
-  const db = fastify.db
+const handlers = defineHandlers({
+  async tokensCreate(request, reply) {
+    const user = await request.db.query.users.findFirst({
+      where: eq(schemas.users.email, request.body.email),
+    })
+    if (!user || !(await verifyPassword(request.body.password, user.passwordDigest))) {
+      throw httpErrors.notFound()
+    }
 
-  fastify.post(
-    '/tokens',
-    async (request, reply) => {
-      const client = await db.query.users.findFirst({
-        // Добавить проверку пароля
-        where: eq(schemas.users.email, request.body.email),
-      })
-      fastify.assert.ok(client, 404)
-      const token = fastify.jwt.sign(
-        { id: client.id, email: client.email },
-        { expiresIn: '1h' }, // время протухания
-      )
-      return reply.code(201)
-        .send({ token })
-    },
-  )
-}
+    const token = request.server.jwt.sign({ id: user.id }, { expiresIn: '1h' })
+
+    return reply.code(201).send({ token })
+  },
+})
+
+export default handlers
