# src/types/index.ts
@@ -4,5 +4,6 @@ import type * as schemas from '../db/schema.ts'
 export type DrizzleDB = ReturnType<typeof drizzle<typeof schemas>>
 
 export type UserInsert = typeof schemas.users.$inferInsert
+export type UserCreate = Omit<UserInsert, 'passwordDigest'> & { password: string }
 export type CourseInsert = typeof schemas.courses.$inferInsert
 export type CourseLessonInsert = typeof schemas.courseLessons.$inferInsert
